op516 add watcha login theme
Squashed commit of the following:

commit 629d2d363e092aa125eb9b27c5a57a2df180cc57
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Aug 4 16:46:24 2020 +0200

    fix: move background-color after background property

commit 8bb208fb0afbbcc483f7a8dbe9132ab9aa61588a
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Aug 4 16:41:27 2020 +0200

    fix: define proper parent for watcha theme

commit 47089a9c61b5cee2624ad2bd4ff5465d20ae9327
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Aug 4 11:59:10 2020 +0200

    feat: unset header text-transform

commit 05abf0cebeb054df79583a5f1c164f76ba26cfe2
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Aug 4 11:56:36 2020 +0200

    feat: unset header color to increase visibility

commit e6f543416ca87220692bcdaac8406fab7f487408
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Aug 4 14:29:01 2020 +0200

    feat: add watcha background image

commit 8c83614a1c55fe73bfb58f68944e6d5afe197532
Author: c-cal <github-2c7c@zebrina.fr>
Date:   Tue Aug 4 14:27:12 2020 +0200

    feat: add watcha favicon

--- a/login/resources/css/login.css
+++ b/login/resources/css/login.css
@@ -1,6 +1,7 @@
 .login-pf body {
-    background: url("../img/keycloak-bg.png") no-repeat center center fixed;
-    background-size: cover;
+    background: url("../img/watcha-bg.png") no-repeat left top fixed;
+    background-size: 30%;
+    background-color: lightgrey;
     height: 100%;
 }
 
@@ -98,14 +99,12 @@ div.kc-logo-text span {
 }
 
 #kc-header {
-    color: #ededed;
     overflow: visible;
     white-space: nowrap;
 }
 
 #kc-header-wrapper {
     font-size: 29px;
-    text-transform: uppercase;
     letter-spacing: 3px;
     line-height: 1.2em;
     padding: 62px 10px 20px;
